# game3

./: .env  README.md  package.json  pnpm-lock.yaml  tsconfig.json
anchor/: Anchor.toml
anchor/programs/game3/: Cargo.toml
anchor/programs/game3/src/: lib.rs
anchor/src/: game3-exports.ts  index.ts
anchor/tests/: game3.spec.ts
circuits/: PlayerStats.circom
src/app/: layout.tsx
src/app/api/actions/: route.ts
src/app/api/check/: route.ts
src/app/api/participate/: route.ts
src/app/api/schedule/: route.ts
src/app/api/test/: route.ts
src/app/game3/: page.tsx
src/app/workers/: pool.js  pool.ts  poolPubg.js
src/components/game3/: game3-data-access.tsx  game3-feature.tsx  game3-ui.tsx
